<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:background="@drawable/login_bg" android:layout_height="match_parent">

    <LinearLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
    >

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:src="@mipmap/logo3"
                android:cropToPadding="false"
                android:adjustViewBounds="false"
                android:contentDescription="@null"
        />

        <EditText
                android:id="@+id/user"
                android:autofillHints="username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/login_edit_text_bg"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textAlignment="center"
                android:textColor="@color/colorTextBlack"
                android:textColorHint="#CCC"
                android:hint="@string/username"
        />


        <EditText
                android:id="@+id/password"
                android:autofillHints="password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:background="@drawable/login_edit_text_bg"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textAlignment="center"
                android:textColor="@color/colorTextBlack"
                android:textColorHint="#CCC"
                android:hint="@string/password_hint"
        />

        <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/remember_my_password"
                android:textColor="@color/colorTextBlack"
                android:theme="@color/colorBotao"
                android:textSize="6pt"
                android:layout_marginTop="10dp"
        />

        <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_button_bg"
                android:text="@string/sign_in"
                android:textColor="@color/colorTextBlack"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
        />

        <Button
                android:id="@+id/btn_cadastrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_button_bg"
                android:text="@string/register"
                android:textColor="@color/colorTextBlack"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
        />

        <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextBlack"
                android:text="@string/forgot_your_login_info"
                android:layout_marginTop="40dp"
                android:layout_gravity="center_horizontal"
        />

    </LinearLayout>

</ScrollView>