<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_bg">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            tools:context="br.com.fake.steam.LoginActivity">


        <TextView
                android:text="@string/criar"
                android:textColor="@color/colorTextBlack"
                android:textAlignment="center"
                android:background="@color/colorDestaque2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="10dp"/>

        <EditText
                android:id="@+id/name_user"
                android:autofillHints="username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/login_edit_text_bg"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textAlignment="center"
                android:textColor="@color/colorTextBlack"
                android:textColorHint="#CCC"
                android:hint="@string/name_user"
        />


        <EditText
                android:id="@+id/email"
                android:autofillHints="email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textEmailAddress"
                android:background="@drawable/login_edit_text_bg"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textAlignment="center"
                android:textColor="@color/colorTextBlack"
                android:textColorHint="#CCC"
                android:hint="@string/email"
        />

        <EditText
                android:id="@+id/senha"
                android:autofillHints="senha"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/login_edit_text_bg"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textAlignment="center"
                android:textColor="@color/colorTextBlack"
                android:textColorHint="#CCC"
                android:hint="@string/senha"
        />

        <EditText
                android:id="@+id/confirma_senha"
                android:autofillHints="confirma_senha"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/login_edit_text_bg"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textAlignment="center"
                android:textColor="@color/colorTextBlack"
                android:textColorHint="#CCC"
                android:hint="@string/confirma_senha"
        />

        <Button
                android:id="@+id/btn_criar_conta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_button_bg"
                android:text="@string/register"
                android:textColor="@color/colorTextBlack"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
        />

        <Button
                android:id="@+id/btn_limpar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_button_bg"
                android:text="@string/limpar"
                android:textColor="@color/colorTextBlack"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
        />

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:src="@mipmap/pain"
                android:cropToPadding="false"
                android:adjustViewBounds="false"
                android:contentDescription="@null"
        />

    </LinearLayout>

</ScrollView>